--- a/API/Doctor.Appointment.API/Doctor.Appointment.API.csproj
+++ b/API/Doctor.Appointment.API/Doctor.Appointment.API.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.22" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Doctor.Appointment.Application\Doctor.Appointment.Application.csproj" />
   </ItemGroup>
 
 </Project>
