--- a/API/Doctor.Appointment.API/appsettings.json
+++ b/API/Doctor.Appointment.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=DoctorAppointmentDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "DoctorAppointmentConnection": "Server=localhost;Database=DoctorAppointmentDb;User Id=your_username;Password=your_password;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  }
 }
